--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,7 @@ jobs:
     - name: Configure CMake
       run: |
         cmake -B build \
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-          -DCMAKE_C_COMPILER=gcc \
-          -DCMAKE_CXX_COMPILER=g++
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
 
     - name: Build
       run: cmake --build build -j$(nproc)
@@ -36,12 +34,12 @@ jobs:
     - name: Check clang-format
       run: |
         find include src tests examples -name '*.h' -o -name '*.c' | \
-          xargs clang-format --dry-run --Werror
+          xargs -d '\n' clang-format --dry-run --Werror
 
     - name: Run cpplint
       run: |
         find include src tests examples -name '*.h' -o -name '*.c' | \
-          xargs cpplint --filter=-legal/copyright || true
+          xargs -d '\n' cpplint --filter=-legal/copyright || true
 
     - name: Run cppcheck
       run: |
